clusters/home/apps/cloud/stoat/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stoat
  namespace: stoat
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "stoat.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-external.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stoat.layertwo.dev`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: stoat-api
          port: 14702
      middlewares:
        - name: stoat-strip-api
    - match: Host(`stoat.layertwo.dev`) && PathPrefix(`/ws`)
      kind: Rule
      services:
        - name: stoat-events
          port: 14703
      middlewares:
        - name: stoat-strip-ws
    - match: Host(`stoat.layertwo.dev`) && PathPrefix(`/autumn`)
      kind: Rule
      services:
        - name: stoat-autumn
          port: 14704
      middlewares:
        - name: stoat-strip-autumn
    - match: Host(`stoat.layertwo.dev`) && PathPrefix(`/january`)
      kind: Rule
      services:
        - name: stoat-january
          port: 14705
      middlewares:
        - name: stoat-strip-january
    - match: Host(`stoat.layertwo.dev`) && PathPrefix(`/gifbox`)
      kind: Rule
      services:
        - name: stoat-gifbox
          port: 14706
      middlewares:
        - name: stoat-strip-gifbox
    - match: Host(`stoat.layertwo.dev`) && PathPrefix(`/livekit`)
      kind: Rule
      services:
        - name: stoat-livekit
          port: 7880
      middlewares:
        - name: stoat-strip-livekit
    - match: Host(`stoat.layertwo.dev`)
      kind: Rule
      priority: 1
      services:
        - name: stoat-web
          port: 5000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stoat-strip-api
  namespace: stoat
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stoat-strip-ws
  namespace: stoat
spec:
  stripPrefix:
    prefixes:
      - /ws
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stoat-strip-autumn
  namespace: stoat
spec:
  stripPrefix:
    prefixes:
      - /autumn
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stoat-strip-january
  namespace: stoat
spec:
  stripPrefix:
    prefixes:
      - /january
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stoat-strip-gifbox
  namespace: stoat
spec:
  stripPrefix:
    prefixes:
      - /gifbox
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stoat-strip-livekit
  namespace: stoat
spec:
  stripPrefix:
    prefixes:
      - /livekit
